MDEV-19866 With a Spider table, a SELECT with WHERE involving primary key breaks following SELECTs (#1356)

Change checking scanning partitions from part_spec to part_info->read_partitions